--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ember-jsonapi-resources-form",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "1.0.0-beta",
+  "description": "Ember Addon: JSON API Resource form components.",
+  "private": false,
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -9,13 +10,13 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/pixelhandler/ember-jsonapi-resources-form",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 4.3.1"
   },
-  "author": "",
+  "author": "Bill Heaton <pixelhandler@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
@@ -23,7 +24,6 @@
     "ember-cli": "2.6.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
@@ -31,7 +31,6 @@
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.6.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
@@ -43,7 +42,11 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^5.1.6",
+    "ember-buffered-proxy": "^0.6.0",
+    "ember-concurrency": "^0.7.8",
+    "ember-cli-htmlbars": "^1.0.3",
+    "ember-route-action-helper": "0.3.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
